--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,4 @@ Finish C-Programming Assignment
 Finish Drawing Assignment
 Prepare a story for the github session
 Complete the practical
+Bunk Applied Mechanics Class
